--- a/app/views/machines/show.html.haml
+++ b/app/views/machines/show.html.haml
@@ -9,6 +9,12 @@
 %p
   %b Out of order:
   = @machine.out_of_order
+%p
+  %b On frequency:
+  = @machine.on_frequency
+%p
+  %b Off frequency:
+  = @machine.off_frequency
 
 = link_to 'Edit', edit_machine_path(@machine)
 \|
