--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -61,5 +61,5 @@
     %footer.footer#footer
       .container
         %p.footertext
-          &copy;#{Date.today.year} Alexander Yates, Carlota Arvela, Bhavesh Prajapat, Amira Deana Abraham, Daniel Ryder
+          &copy;#{Date.today.year} Bhavesh Prajapat
 
